complete home page section by adding image and message

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
             </ul>
         </div>
         <div class="mcontent">
-            
+            <div class="minfo">
+                <h1>Relax and Breathe</h1>
+                <p>Use this website to find music that helps you to relax and let your thoughts flow freely through your mind</p>
+                <button>Get Started</button>
+            </div>
+            <img src="./images/images1.jpg" alt="chill image" class="home-image">
         </div>
     </div>
 </body>
