add remaining section and complete the site

--- a/index.html
+++ b/index.html
@@ -1,30 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Chills</title>
-</head>
-<body>
-    <div class="container">
-        <div class="navbar">
-            <a href="#" class="logo">Chills</a>
-            <ul>
-                <li><a href="#" class="linkText">Explore</a></li>
-                <li><a href="#" class="linkText">community</a></li>
-                <li><a href="#" class="linkText">join now</a></li>
-            </ul>
+  </head>
+  <body>
+    <div class="container1">
+      <div class="navbar">
+        <a href="#" class="logo">Chills</a>
+        <ul>
+          <li><a href="#" class="linkText">Explore</a></li>
+          <li><a href="#" class="linkText">community</a></li>
+          <li><a href="#" class="linkText">join now</a></li>
+        </ul>
+      </div>
+      <div class="mcontent">
+        <div class="minfo">
+          <h1>Relax and Breathe</h1>
+          <p>
+            Use this website to find music that helps you to relax and let your
+            thoughts flow freely through your mind
+          </p>
+          <button>Get Started</button>
         </div>
-        <div class="mcontent">
-            <div class="minfo">
-                <h1>Relax and Breathe</h1>
-                <p>Use this website to find music that helps you to relax and let your thoughts flow freely through your mind</p>
-                <button>Get Started</button>
+        <img src="./images/images1.jpg" alt="chill image" class="home-image" />
+      </div>
+    </div>
+
+    <div class="container2">
+      <h1 class="sheading">Take a look at what we have</h1>
+      <div class="cards">
+        <div class="card">
+          <a href="https://www.youtube.com/watch?v=pLcw3dK1yU0"
+            ><img src="./images/card1.jpg" alt="An image and link to a song"
+          /></a>
+          <p>Just relax and enjoy the music by clicking on the image</p>
+        </div>
+        <div class="card">
+          <a href="https://www.youtube.com/watch?v=hQT6WMJ-Fco"
+            ><img src="./images/card2.jpg" alt="An image and link to a song"
+          /></a>
+          <p>Just relax and enjoy the music by clicking on the image</p>
+        </div>
+        <div class="card">
+          <a href="https://www.youtube.com/watch?v=4Spo0FmmZPs"
+            ><img src="./images/card3.jpg" alt="An image and link to a song"
+          /></a>
+          <p>Just relax and enjoy the music by clicking on the image</p>
+        </div>
+        <div class="card">
+          <a href="https://www.youtube.com/watch?v=OJ9ZwLEeLKI"
+            ><img src="./images/card4.jpg" alt="An image and link to a song"
+          /></a>
+          <p>Just relax and enjoy the music by clicking on the image</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container3">
+      <div class="quote">
+        <p>
+          “Music does a lot of things for a lot of people. It’s transporting,
+          for sure. It can take you right back, years back, to the very moment
+          certain things happened in your life. It’s uplifting, it’s
+          encouraging, it’s strengthening.”
+        </p>
+        <p class="author">-Aretha Franklin</p>
+      </div>
+    </div>
+
+    <div class="container4">
+        <div class="sup">
+            <div class="sup-info">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our website by clicking that button right over there!</p>
             </div>
-            <img src="./images/images1.jpg" alt="chill image" class="home-image">
+            <button class="sup-btn">Sign Up</button>
         </div>
     </div>
-</body>
+    <footer>
+        <p>Copyright ©️ github.com/yrx13</p>
+    </footer>
+  </body>
 </html>
