update footer github link

--- a/index.html
+++ b/index.html
@@ -73,16 +73,18 @@
     </div>
 
     <div class="container4">
-        <div class="sup">
-            <div class="sup-info">
-                <h2>Call to action! It's time!</h2>
-                <p>Sign up for our website by clicking that button right over there!</p>
-            </div>
-            <button class="sup-btn">Sign Up</button>
+      <div class="sup">
+        <div class="sup-info">
+          <h2>Call to action! It's time!</h2>
+          <p>
+            Sign up for our website by clicking that button right over there!
+          </p>
         </div>
+        <button class="sup-btn">Sign Up</button>
+      </div>
     </div>
     <footer>
-        <p>Copyright ©️ github.com/yrx13</p>
+      <p>Copyright ©️ github.com/yaswanth-vakkala</p>
     </footer>
   </body>
 </html>
